Revisi Tutorial REST Server

--- a/Membuat REST API Server Menggunakan CodeIgniter.ipynb
+++ b/Membuat REST API Server Menggunakan CodeIgniter.ipynb
@@ -196,6 +196,225 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "670bwnheW0qP",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **POST**\n",
+        "Metode POST digunakan untuk menambahkan data. Lanjutkan kodingan selanjutnya dibawah fungsi **index_get()**."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fUjQFPBBXCb1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "// Mengirim atau menambah data telepon baru.\n",
+        "function index_post() {\n",
+        "    $data = array(\n",
+        "        'id' => $this->post('id'),\n",
+        "        'nama' => $this->post('nama'),\n",
+        "        'nomor' => $this->post('nomor')\n",
+        "    );\n",
+        "\n",
+        "    $insert = $this->db->insert('telepon', $data);\n",
+        "    \n",
+        "    if ($insert) {\n",
+        "        $this->response($data, 200);\n",
+        "    } else {\n",
+        "        $this->response(array('status' => 'fail', 502));\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HFNezUFyYcaY",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **PUT**\n",
+        "Metode PUT digunakan untuk mengubah data berdasarkan ID. Lanjutkan kodingan selanjutnya dibawah fungsi **index_post()**."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eRjvpMgXYsQN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "// Mengubah data telepon yang sudah ada berdasarkan ID.\n",
+        "function index_put() {\n",
+        "    $id = $this->put('id');\n",
+        "    \n",
+        "    $data = array(\n",
+        "        'id' => $this->put('id'),\n",
+        "        'nama' => $this->put('nama'),\n",
+        "        'nomor' => $this->put('nomor')\n",
+        "    );\n",
+        "\n",
+        "    $this->db->where('id', $id);\n",
+        "    $update = $this->db->update('telepon', $data);\n",
+        "\n",
+        "    if ($update) {\n",
+        "        $this->response($data, 200);\n",
+        "    } else {\n",
+        "        $this->response(array('status' => 'fail', 502));\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uR_SbMXPatDD",
+        "colab_type": "text"
+      },
+      "source": [
+        "### **DELETE**\n",
+        "Metode DELETE digunakan untuk menghapus data berdasarkan ID. Lanjutkan kodingan selanjutnya dibawah fungsi **index_put()**."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZKcp8xjIa8NC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "// Menghapus salah satu data telepon berdasarkan ID.\n",
+        "function index_delete() {\n",
+        "    $id = $this->delete('id');\n",
+        "    \n",
+        "    $this->db->where('id', $id);\n",
+        "    $delete = $this->db->delete('telepon');\n",
+        "    \n",
+        "    if ($delete) {\n",
+        "        $this->response(array('status' => 'success'), 201);\n",
+        "    } else {\n",
+        "        $this->response(array('status' => 'fail', 502));\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9CgnPlN3bouD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Selesai, untuk mencobanya buka Postman. Seharusnya kodingan lengkap dari controller **Kontak.php** seperti dibawah ini."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dg1VE_rOcKUL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "<?php\n",
+        "\n",
+        "defined('BASEPATH') OR exit('No direct script access allowed');\n",
+        "\n",
+        "// Load library REST Server\n",
+        "require APPPATH . '/libraries/REST_Controller.php';\n",
+        "use Restserver\\Libraries\\REST_Controller;\n",
+        "\n",
+        "class Kontak extends REST_Controller {\n",
+        "    function __construct($config='rest') {\n",
+        "        parent::__construct($config);\n",
+        "        $this->load->database();\n",
+        "    }\n",
+        "\n",
+        "    //Menampilkan data kontak\n",
+        "    function index_get() {\n",
+        "        $id = $this->get('id');\n",
+        "        \n",
+        "        if($id == '') {\n",
+        "            $kontak = $this->db->get('telepon')->result();\n",
+        "        } else {\n",
+        "            $this->db->where('id', $id);\n",
+        "            $kontak = $this->db->get('telepon')->result();\n",
+        "        }\n",
+        "\n",
+        "        $this->response(array('status' => 'OK', 'result' => $kontak, 'message' => 'Success'), 200);\n",
+        "    }\n",
+        "\n",
+        "    // Mengirim atau menambah data telepon baru.\n",
+        "    function index_post() {\n",
+        "        $data = array(\n",
+        "            'id' => $this->post('id'),\n",
+        "            'nama' => $this->post('nama'),\n",
+        "            'nomor' => $this->post('nomor')\n",
+        "        );\n",
+        "\n",
+        "        $insert = $this->db->insert('telepon', $data);\n",
+        "        \n",
+        "        if ($insert) {\n",
+        "            $this->response($data, 200);\n",
+        "        } else {\n",
+        "            $this->response(array('status' => 'fail', 502));\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    // Mengubah data telepon yang sudah ada berdasarkan ID.\n",
+        "    function index_put() {\n",
+        "        $id = $this->put('id');\n",
+        "        \n",
+        "        $data = array(\n",
+        "            'id' => $this->put('id'),\n",
+        "            'nama' => $this->put('nama'),\n",
+        "            'nomor' => $this->put('nomor')\n",
+        "        );\n",
+        "\n",
+        "        $this->db->where('id', $id);\n",
+        "        $update = $this->db->update('telepon', $data);\n",
+        "\n",
+        "        if ($update) {\n",
+        "            $this->response($data, 200);\n",
+        "        } else {\n",
+        "            $this->response(array('status' => 'fail', 502));\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    // Menghapus salah satu data telepon berdasarkan ID.\n",
+        "    function index_delete() {\n",
+        "        $id = $this->delete('id');\n",
+        "        \n",
+        "        $this->db->where('id', $id);\n",
+        "        $delete = $this->db->delete('telepon');\n",
+        "        \n",
+        "        if ($delete) {\n",
+        "            $this->response(array('status' => 'success'), 201);\n",
+        "        } else {\n",
+        "            $this->response(array('status' => 'fail', 502));\n",
+        "        }\n",
+        "    }\n",
+        "}\n",
+        "?>"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
