Revisi Tutorial REST Server

--- a/Membuat REST API Server Menggunakan CodeIgniter.ipynb
+++ b/Membuat REST API Server Menggunakan CodeIgniter.ipynb
@@ -321,7 +321,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Selesai, untuk mencobanya buka Postman. Seharusnya kodingan lengkap dari controller **Kontak.php** seperti dibawah ini."
+        "Selesai, untuk mencobanya buka **Postman**. Seharusnya kodingan lengkap dari controller **Kontak.php** seperti dibawah ini."
       ]
     },
     {
