Revisi Tutorial REST Server

--- a/Membuat REST API Server Menggunakan CodeIgniter.ipynb
+++ b/Membuat REST API Server Menggunakan CodeIgniter.ipynb
@@ -14,19 +14,6 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qtWlM7Y4PfZG",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "WYTgfCzgYzDd",
@@ -45,21 +32,11 @@
         "\n",
         "![REST Server Test](https://static.cdn-cdpl.com/source/18844/1_restserver.png)\n",
         "### **Konfigurasi Database**\n",
-        "Buat database baru dan beri nama **retrofit**.\n"
+        "Buat database baru dan beri nama **retrofit**.\n",
+        "```\n",
+        "CREATE DATABASE retrofit;\n",
+        "```"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mOteNY_aKOwa",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "CREATE DATABASE retrofit;"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -68,17 +45,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Buat tabel baru dan beri nama **telepon**.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lHDhS6ehK9PS",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Buat tabel baru dan beri nama **telepon**.\n",
+        "```\n",
         "USE retrofit;\n",
         "CREATE TABLE IF NOT EXISTS `telepon` (\n",
         "  `id` int(11) NOT NULL AUTO_INCREMENT,\n",
@@ -86,10 +54,9 @@
         "  `nomor` varchar(13) NOT NULL,\n",
         "  `foto` varchar(255),\n",
         "  PRIMARY KEY (`id`)\n",
-        ") ENGINE=InnoDB  DEFAULT CHARSET=latin1 AUTO_INCREMENT=8;"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        ") ENGINE=InnoDB  DEFAULT CHARSET=latin1 AUTO_INCREMENT=8;\n",
+        "```\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -99,21 +66,11 @@
       },
       "source": [
         "### **Konfigurasi File**\n",
-        "Buka file **applications/config/config.php**, lalu edit kodingan baris 26 seperti dibawah ini."
+        "Buka file **applications/config/config.php**, lalu edit kodingan baris 26 seperti dibawah ini.\n",
+        "```\n",
+        "$config['base_url'] = 'http://192.168.43.225/rest_ci/';\n",
+        "```"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dQb1JUAUM8Fq",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "$config['base_url'] = 'http://192.168.43.225/rest_ci/';"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -122,24 +79,14 @@
         "colab_type": "text"
       },
       "source": [
-        "Perhatikan bahwa **192.168.43.225** merupakan alamat IP komputer Anda. Dan **rest_ci** merupakan nama folder CodeIgniter. Lalu buka file **applications/config/database.php**, lalu edit kodingan baris 78-81 seperti dibawah ini."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zFfogwFNOSyT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Perhatikan bahwa **192.168.43.225** merupakan alamat IP komputer Anda. Dan **rest_ci** merupakan nama folder CodeIgniter. Lalu buka file **applications/config/database.php**, lalu edit kodingan baris 78-81 seperti dibawah ini.\n",
+        "```\n",
         "'hostname' => 'localhost',\n",
         "'username' => 'root',\n",
         "'password' => '',\n",
-        "'database' => 'retrofit',"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "'database' => 'retrofit',\n",
+        "```"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -151,17 +98,8 @@
         "### **GET**\n",
         "Metode GET digunakan untuk membaca data yang disediakan oleh REST API. Biasanya untuk membaca semua data atau data yang lebih spesifik seperti ID.\n",
         "\n",
-        "Buat file controller baru dan beri nama **application/controllers/Kontak.php**."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_QwFw8BMRJx5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Buat file controller baru dan beri nama **application/controllers/Kontak.php**.\n",
+        "```\n",
         "<?php\n",
         "\n",
         "defined('BASEPATH') OR exit('No direct script access allowed');\n",
@@ -192,10 +130,9 @@
         "\n",
         "    // Kodingan selanjutnya\n",
         "}\n",
-        "?>"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "?>\n",
+        "```"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -205,17 +142,8 @@
       },
       "source": [
         "### **POST**\n",
-        "Metode POST digunakan untuk menambahkan data. Lanjutkan kodingan selanjutnya dibawah fungsi **index_get()**."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fUjQFPBBXCb1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Metode POST digunakan untuk menambahkan data. Lanjutkan kodingan selanjutnya dibawah fungsi **index_get()**.\n",
+        "```\n",
         "// Mengirim atau menambah data telepon baru.\n",
         "function index_post() {\n",
         "    $data = array(\n",
@@ -231,10 +159,9 @@
         "    } else {\n",
         "        $this->response(array('status' => 'fail', 502));\n",
         "    }\n",
-        "}"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "}\n",
+        "```"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -244,17 +171,8 @@
       },
       "source": [
         "### **PUT**\n",
-        "Metode PUT digunakan untuk mengubah data berdasarkan ID. Lanjutkan kodingan selanjutnya dibawah fungsi **index_post()**."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eRjvpMgXYsQN",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Metode PUT digunakan untuk mengubah data berdasarkan ID. Lanjutkan kodingan selanjutnya dibawah fungsi **index_post()**.\n",
+        "```\n",
         "// Mengubah data telepon yang sudah ada berdasarkan ID.\n",
         "function index_put() {\n",
         "    $id = $this->put('id');\n",
@@ -273,10 +191,9 @@
         "    } else {\n",
         "        $this->response(array('status' => 'fail', 502));\n",
         "    }\n",
-        "}"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "}\n",
+        "```"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -286,17 +203,8 @@
       },
       "source": [
         "### **DELETE**\n",
-        "Metode DELETE digunakan untuk menghapus data berdasarkan ID. Lanjutkan kodingan selanjutnya dibawah fungsi **index_put()**."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZKcp8xjIa8NC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Metode DELETE digunakan untuk menghapus data berdasarkan ID. Lanjutkan kodingan selanjutnya dibawah fungsi **index_put()**.\n",
+        "```\n",
         "// Menghapus salah satu data telepon berdasarkan ID.\n",
         "function index_delete() {\n",
         "    $id = $this->delete('id');\n",
@@ -309,10 +217,9 @@
         "    } else {\n",
         "        $this->response(array('status' => 'fail', 502));\n",
         "    }\n",
-        "}"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "}\n",
+        "```"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -321,17 +228,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Selesai, untuk mencobanya buka **Postman**. Seharusnya kodingan lengkap dari controller **Kontak.php** seperti dibawah ini."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dg1VE_rOcKUL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "Selesai, untuk mencobanya buka **Postman**. Seharusnya kodingan lengkap dari controller **Kontak.php** seperti dibawah ini.\n",
+        "```\n",
         "<?php\n",
         "\n",
         "defined('BASEPATH') OR exit('No direct script access allowed');\n",
@@ -411,10 +309,9 @@
         "        }\n",
         "    }\n",
         "}\n",
-        "?>"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "?>\n",
+        "```"
+      ]
     }
   ]
 }
