Revisi Tutorial REST Client

--- a/REST API Client Sederhana Menggunakan Retrofit.ipynb
+++ b/REST API Client Sederhana Menggunakan Retrofit.ipynb
@@ -32,7 +32,280 @@
         "```\n",
         "<uses-permission android:name=\"android.permission.INTERNET\" />\n",
         "```\n",
-        "\n"
+        "### **Perbarui Gradle (Module)**\n",
+        "Tambahkan beberapa library Gson, Retrofit, dan RecyclerView.\n",
+        "```\n",
+        "implementation 'com.google.code.gson:gson:2.8.6'\n",
+        "implementation 'com.squareup.retrofit2:retrofit:2.6.2'\n",
+        "implementation 'com.squareup.retrofit2:converter-gson:2.6.2'\n",
+        "implementation 'androidx.recyclerview:recyclerview:1.0.0'\n",
+        "```\n",
+        "Lalu, klik **Sync Now**. Tunggu sampai proses sinkronisasi selesai.\n",
+        "\n",
+        "## **Package Model**\n",
+        "Buat 3 class baru dengan nama **Kontak**, **GetKontak**, dan **PostPutDelKontak**.\n",
+        "### **Kontak**\n",
+        "Class ini berisi konstruktor dan atribut-atribut yang diperlukan.\n",
+        "```\n",
+        "package com.fuadhd.kontak.Model;\n",
+        "\n",
+        "import com.google.gson.annotations.SerializedName;\n",
+        "\n",
+        "public class Kontak {\n",
+        "    @SerializedName(\"id\")\n",
+        "    private String id;\n",
+        "    @SerializedName(\"nama\")\n",
+        "    private String nama;\n",
+        "    @SerializedName(\"nomor\")\n",
+        "    private String nomor;\n",
+        "//    @SerializedName(\"foto\")\n",
+        "//    private String foto;\n",
+        "\n",
+        "    public Kontak(){}\n",
+        "\n",
+        "//    public Kontak(String id, String nama, String nomor, String foto) {\n",
+        "//        this.id = id;\n",
+        "//        this.nama = nama;\n",
+        "//        this.nomor = nomor;\n",
+        "//        this.foto = foto;\n",
+        "//    }\n",
+        "\n",
+        "    public Kontak(String id, String nama, String nomor) {\n",
+        "        this.id = id;\n",
+        "        this.nama = nama;\n",
+        "        this.nomor = nomor;\n",
+        "    }\n",
+        "\n",
+        "    public String getId() {\n",
+        "        return id;\n",
+        "    }\n",
+        "\n",
+        "    public void setId(String id) {\n",
+        "        this.id = id;\n",
+        "    }\n",
+        "\n",
+        "    public String getNama() {\n",
+        "        return nama;\n",
+        "    }\n",
+        "\n",
+        "    public void setNama(String nama) {\n",
+        "        this.nama = nama;\n",
+        "    }\n",
+        "\n",
+        "    public String getNomor() {\n",
+        "        return nomor;\n",
+        "    }\n",
+        "\n",
+        "    public void setNomor(String nomor) {\n",
+        "        this.nomor = nomor;\n",
+        "    }\n",
+        "\n",
+        "//    public void setFoto(String foto) {\n",
+        "//        this.foto = foto;\n",
+        "//    }\n",
+        "//\n",
+        "//    public String getFoto() {\n",
+        "//        return foto;\n",
+        "//    }\n",
+        "}\n",
+        "```\n",
+        "### **GetKontak**\n",
+        "Class ini berfungsi untuk mempresentasikan respon dari server saat melihat data.\n",
+        "```\n",
+        "package com.fuadhd.kontak.Model;\n",
+        "\n",
+        "import com.google.gson.annotations.SerializedName;\n",
+        "\n",
+        "import java.util.List;\n",
+        "\n",
+        "public class GetKontak {\n",
+        "    @SerializedName(\"status\")\n",
+        "    String status;\n",
+        "    @SerializedName(\"result\")\n",
+        "    List<Kontak> listDataKontak;\n",
+        "    @SerializedName(\"message\")\n",
+        "    String message;\n",
+        "    public String getStatus() {\n",
+        "        return status;\n",
+        "    }\n",
+        "    public void setStatus(String status) {\n",
+        "        this.status = status;\n",
+        "    }\n",
+        "    public String getMessage() {\n",
+        "        return message;\n",
+        "    }\n",
+        "    public void setMessage(String message) {\n",
+        "        this.message = message;\n",
+        "    }\n",
+        "    public List<Kontak> getListDataKontak() {\n",
+        "        return listDataKontak;\n",
+        "    }\n",
+        "    public void setListDataKontak(List<Kontak> listDataKontak) {\n",
+        "        this.listDataKontak = listDataKontak;\n",
+        "    }\n",
+        "}\n",
+        "```\n",
+        "### **PostPutDelKontak**\n",
+        "Class ini berfungsi untuk mempresentasikan respon dari server saat manipulasi data.\n",
+        "```\n",
+        "package com.fuadhd.kontak.Model;\n",
+        "\n",
+        "import com.google.gson.annotations.SerializedName;\n",
+        "\n",
+        "public class PostPutDelKontak {\n",
+        "    @SerializedName(\"status\")\n",
+        "    String status;\n",
+        "    @SerializedName(\"result\")\n",
+        "    Kontak mKontak;\n",
+        "    @SerializedName(\"message\")\n",
+        "    String message;\n",
+        "    public String getStatus() {\n",
+        "        return status;\n",
+        "    }\n",
+        "    public void setStatus(String status) {\n",
+        "        this.status = status;\n",
+        "    }\n",
+        "    public String getMessage() {\n",
+        "        return message;\n",
+        "    }\n",
+        "    public void setMessage(String message) {\n",
+        "        this.message = message;\n",
+        "    }\n",
+        "    public Kontak getKontak() {\n",
+        "        return mKontak;\n",
+        "    }\n",
+        "    public void setKontak(Kontak Kontak) {\n",
+        "        mKontak = Kontak;\n",
+        "    }\n",
+        "}\n",
+        "```\n",
+        "## **Package Rest**\n",
+        "Buat sebuah class dengan nama **ApiClient** dan sebuah interface dengan nama **ApiInterface**.\n",
+        "### **ApiClient**\n",
+        "Class ini berfungsi untuk membuat koneksi dengan REST Server melalui alamat URL.\n",
+        "```\n",
+        "package com.fuadhd.kontak.Rest;\n",
+        "\n",
+        "import retrofit2.Retrofit;\n",
+        "import retrofit2.converter.gson.GsonConverterFactory;\n",
+        "\n",
+        "public class ApiClient {\n",
+        "    public static final String BASE_URL = \"http://192.168.43.225/rest_ci/index.php/kontak/\";\n",
+        "    private static Retrofit retrofit = null;\n",
+        "    public static Retrofit getClient() {\n",
+        "        if (retrofit==null) {\n",
+        "            retrofit = new Retrofit.Builder()\n",
+        "                    .baseUrl(BASE_URL)\n",
+        "                    .addConverterFactory(GsonConverterFactory.create())\n",
+        "                    .build();\n",
+        "        }\n",
+        "        return retrofit;\n",
+        "    }\n",
+        "}\n",
+        "```\n",
+        "### **ApiInterface**\n",
+        "Interface ini berisi metode-metode untuk berkomunikasi serta atribut-atribut yang dibutuhkan saat berkomunikasi dengan REST Server.\n",
+        "```\n",
+        "package com.fuadhd.kontak.Rest;\n",
+        "\n",
+        "import com.fuadhd.kontak.Model.GetKontak;\n",
+        "import com.fuadhd.kontak.Model.PostPutDelKontak;\n",
+        "\n",
+        "import okhttp3.MultipartBody;\n",
+        "import retrofit2.Call;\n",
+        "import retrofit2.http.Field;\n",
+        "import retrofit2.http.FormUrlEncoded;\n",
+        "import retrofit2.http.GET;\n",
+        "import retrofit2.http.HTTP;\n",
+        "import retrofit2.http.POST;\n",
+        "import retrofit2.http.PUT;\n",
+        "import retrofit2.http.Part;\n",
+        "\n",
+        "public interface ApiInterface {\n",
+        "    @GET(\"kontak_android\")\n",
+        "    Call<GetKontak> getKontak();\n",
+        "    @FormUrlEncoded\n",
+        "    @POST(\"kontak\")\n",
+        "    Call<PostPutDelKontak> postKontak(@Field(\"nama\") String nama, @Field(\"nomor\") String nomor);\n",
+        "    @FormUrlEncoded\n",
+        "    @PUT(\"kontak\")\n",
+        "    Call<PostPutDelKontak> putKontak(@Field(\"id\") String id,\n",
+        "                                     @Field(\"nama\") String nama,\n",
+        "                                     @Field(\"nomor\") String nomor);\n",
+        "    @FormUrlEncoded\n",
+        "    @HTTP(method = \"DELETE\", path = \"kontak\", hasBody = true)\n",
+        "    Call<PostPutDelKontak> deleteKontak(@Field(\"id\") String id);\n",
+        "}\n",
+        "```\n",
+        "## **Package Adapter**\n",
+        "Buat class baru dan beri nama **KontakAdapter**.\n",
+        "### **KontakAdapter**\n",
+        "Adapter ini untuk menangani tampilan daftar kontak.\n",
+        "```\n",
+        "package com.fuadhd.kontak.Adapter;\n",
+        "\n",
+        "import android.content.Intent;\n",
+        "import android.view.LayoutInflater;\n",
+        "import android.view.View;\n",
+        "import android.view.ViewGroup;\n",
+        "import android.widget.TextView;\n",
+        "\n",
+        "import androidx.recyclerview.widget.RecyclerView;\n",
+        "\n",
+        "import com.fuadhd.kontak.EditActivity;\n",
+        "import com.fuadhd.kontak.Model.Kontak;\n",
+        "import com.fuadhd.kontak.R;\n",
+        "\n",
+        "import java.util.List;\n",
+        "\n",
+        "public class KontakAdapter extends RecyclerView.Adapter<KontakAdapter.MyViewHolder> {\n",
+        "    List<Kontak> mKontakList;\n",
+        "\n",
+        "    public KontakAdapter(List <Kontak> KontakList) {\n",
+        "        mKontakList = KontakList;\n",
+        "    }\n",
+        "\n",
+        "    @Override\n",
+        "    public MyViewHolder onCreateViewHolder (ViewGroup parent, int viewType){\n",
+        "        View mView = LayoutInflater.from(parent.getContext()).inflate(R.layout.kontak_list, parent, false);\n",
+        "        MyViewHolder mViewHolder = new MyViewHolder(mView);\n",
+        "        return mViewHolder;\n",
+        "    }\n",
+        "\n",
+        "    @Override\n",
+        "    public void onBindViewHolder (MyViewHolder holder, final int position){\n",
+        "        holder.mTextViewId.setText(\"Id = \" + mKontakList.get(position).getId());\n",
+        "        holder.mTextViewNama.setText(\"Nama = \" + mKontakList.get(position).getNama());\n",
+        "        holder.mTextViewNomor.setText(\"Nomor = \" + mKontakList.get(position).getNomor());\n",
+        "        holder.itemView.setOnClickListener(new View.OnClickListener() {\n",
+        "            @Override\n",
+        "            public void onClick(View view) {\n",
+        "                Intent mIntent = new Intent(view.getContext(), EditActivity.class);\n",
+        "                mIntent.putExtra(\"Id\", mKontakList.get(position).getId());\n",
+        "                mIntent.putExtra(\"Nama\", mKontakList.get(position).getNama());\n",
+        "                mIntent.putExtra(\"Nomor\", mKontakList.get(position).getNomor());\n",
+        "                view.getContext().startActivity(mIntent);\n",
+        "            }\n",
+        "        });\n",
+        "    }\n",
+        "\n",
+        "    @Override\n",
+        "    public int getItemCount () {\n",
+        "        return mKontakList.size();\n",
+        "    }\n",
+        "\n",
+        "    public class MyViewHolder extends RecyclerView.ViewHolder {\n",
+        "        public TextView mTextViewId, mTextViewNama, mTextViewNomor;\n",
+        "\n",
+        "        public MyViewHolder(View itemView) {\n",
+        "            super(itemView);\n",
+        "            mTextViewId = (TextView) itemView.findViewById(R.id.tvId);\n",
+        "            mTextViewNama = (TextView) itemView.findViewById(R.id.tvNama);\n",
+        "            mTextViewNomor = (TextView) itemView.findViewById(R.id.tvNomor);\n",
+        "        }\n",
+        "    }\n",
+        "}\n",
+        "```"
       ]
     }
   ]
