Revisi Tutorial REST Client

--- a/REST API Client Sederhana Menggunakan Retrofit.ipynb
+++ b/REST API Client Sederhana Menggunakan Retrofit.ipynb
@@ -305,6 +305,50 @@
         "        }\n",
         "    }\n",
         "}\n",
+        "```\n",
+        "## **Buat Layout kontak_list.xml**\n",
+        "Layout ini digunakan untuk tampilan setiap item kontak.\n",
+        "```\n",
+        "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n",
+        "<LinearLayout xmlns:android=\"http://schemas.android.com/apk/res/android\"\n",
+        "    android:layout_width=\"match_parent\"\n",
+        "    android:layout_height=\"wrap_content\"\n",
+        "    android:orientation=\"vertical\">\n",
+        "    <RelativeLayout\n",
+        "        android:layout_width=\"wrap_content\"\n",
+        "        android:layout_height=\"wrap_content\"\n",
+        "        android:layout_margin=\"10dp\">\n",
+        "        <TextView\n",
+        "            android:id=\"@+id/tvId\"\n",
+        "            android:layout_width=\"wrap_content\"\n",
+        "            android:layout_height=\"wrap_content\"\n",
+        "            android:hint=\"Id\"\n",
+        "            android:layout_alignParentRight=\"true\"\n",
+        "            android:textSize=\"15sp\"\n",
+        "            android:textStyle=\"bold\"\n",
+        "            />\n",
+        "        <TextView\n",
+        "            android:id=\"@+id/tvNama\"\n",
+        "            android:layout_width=\"wrap_content\"\n",
+        "            android:layout_height=\"wrap_content\"\n",
+        "            android:hint=\"Nama\"\n",
+        "            android:layout_below=\"@id/tvId\"\n",
+        "            android:textSize=\"15sp\"\n",
+        "            />\n",
+        "        <TextView\n",
+        "            android:id=\"@+id/tvNomor\"\n",
+        "            android:layout_width=\"wrap_content\"\n",
+        "            android:layout_height=\"wrap_content\"\n",
+        "            android:hint=\"Nomor\"\n",
+        "            android:textSize=\"15sp\"\n",
+        "            android:layout_below=\"@id/tvNama\"\n",
+        "            />\n",
+        "    </RelativeLayout>\n",
+        "    <View\n",
+        "        android:background=\"@color/colorPrimary\"\n",
+        "        android:layout_width=\"match_parent\"\n",
+        "        android:layout_height=\"5dp\"/>\n",
+        "</LinearLayout>\n",
         "```"
       ]
     }
